because of Phabricator reports.

* (T379137) Added language support for Hunde (hke).
* (T381463) Added language support for Coptic (cop).
* (T381894) Added language support for Fur (fvr).
* (T379137) Added language support for Mindong (Traditional Han script)
  (cdo-hant).
* (T379137) Added language support for Mindong (Latin script) (cdo-latn).
* …

=== Breaking changes in 1.44 ===

* In StatusValue::replaceMessage(), ::hasMessage() and ::hasMessagesExcept()
  passing MessageSpecifier or MessageValue as $source, deprecated in 1.43,
  is no longer allowed.
* StatusValue will no longer accept errors given as a MessageSpecifier
  combined with a parameters array. This was deprecated in 1.43.
* The methods MessageValue::objectParams(), Message::objectParams()
  and Message::objectParam(), deprecated in 1.43, have been removed.
* The UserGroupMembershipParam class, deprecated in 1.43, has been removed.
* The ParamType::OBJECT constant, deprecated in 1.43, has been removed.
* The MediaWiki\Message\Converter class, deprecated in 1.43, has been removed.
  Use MessageValue::newFromSpecifier or Message::newFromSpecifier
  instead (T358779).
* Return type declarations were added to methods in `includes/libs/Message`,
  specifically in the `MessageSpecifier`, `ITextFormatter`, and
  `IMessageFormatterFactory` interfaces. This update enhances type safety but
  may require updates in any classes implementing these interfaces, including
  external extensions. Extensions such as Translate, Flow, and ReadingLists
  require compatibility patches to support these changes.
* IDatabase::LB_TRX_ROUND_ID was removed and IDatabase::LB_READ_ONLY_REASON
  was marked as an internal constant.
* The ParsoidOutputAccess class marked @unstable from creation and
  deprecated with all of its methods in 1.43, has been removed.
* (T382030) MediaWiki core database schema and schema changes have been moved
  to a new top-level sql/ directory. This should only affect code directly