@@ -1,0 +1,10 @@
+<?php
+/** Lampung Api (Lampung Api)
+ *
+ * @file
+ * @ingroup Languages
+ *
+ * @author Amir E. Aharoni
+ */
+
+$fallback = 'id';
