@@ -1,0 +1,10 @@
+<?php
+/** Waale (Wali)
+ *
+ * @file
+ * @ingroup Languages
+ *
+ * @author Amir E. Aharoni
+ */
+
+$linkTrail = '/^([ɛŋɔƐŊƆa-z]+)(.*)$/sDu';
