@@ -150,6 +150,8 @@ because of Phabricator reports.
 * (T379137) Added language support for Mindong (Traditional Han script)
   (cdo-hant).
 * (T379137) Added language support for Mindong (Latin script) (cdo-latn).
+* (T384234) Added language support for Wali (wlx).
+* (T384245) Added language support for Lampung Api (ljp).
 * …
 
 === Breaking changes in 1.44 ===
